Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long long ULONGLONG;
typedef char * LPSTR;
typedef int BOOL;
typedef void * HCARD;
typedef int HCARD;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef struct
{
	USHORT  days;
	USHORT  hours;
	USHORT  min;
	USHORT  sec;
	USHORT  msec;
	USHORT  usec;
} BTIIRIGTIME;
typedef BTIIRIGTIME * LPBTIIRIGTIME;
BTICardAPI VOID __stdcall BTICard_IRIGFieldPutMin(ULONG value,LPULONG irigvalh,LPULONG irigvall);
BTICardAPI VOID __stdcall BTICard_IRIGFieldPutSec(ULONG value,LPULONG irigvalh,LPULONG irigvall);
BTICardAPI ERRVAL __stdcall BTICard_IRIGInputThresholdGet(LPUSHORT dacval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IRIGInputThresholdSet(USHORT dacval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IRIGRd(LPBTIIRIGTIME irigtime,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IRIGRdEx(LPUSHORT timebuf,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_IRIGSyncStatus(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_IRIGTimeBCDToBin(LPULONG timevalh,LPULONG timevall,ULONG irigvalh,ULONG irigvall);
BTICardAPI VOID __stdcall BTICard_IRIGTimeBCDToNanoBin(LPULONG timevalh,LPULONG timevall,ULONG irigvalh,ULONG irigvall);
BTICardAPI VOID __stdcall BTICard_IRIGTimeBinToBCD(LPULONG irigvalh,LPULONG irigvall,ULONG timevalh,ULONG timevall);
BTICardAPI VOID __stdcall BTICard_IRIGTimeNanoBinToBCD(LPULONG irigvalh,LPULONG irigvall,ULONG timevalh,ULONG timevall);
BTICardAPI ERRVAL __stdcall BTICard_IRIGWr(LPBTIIRIGTIME irigtime,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_IRIGWrEx(LPUSHORT timebuf,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_KernIntStatus(LPINT valueptr,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_KernStatus(LPULONG valueptr,ULONG type,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);
BTICardAPI ULONG __stdcall BTICard_MakeLong(USHORT valh,USHORT vall);
BTICardAPI ULONGLONG __stdcall BTICard_MakeQuad(ULONG valh,ULONG vall);
BTICardAPI USHORT __stdcall BTICard_MakeWord(BYTE valh,BYTE vall);
BTICardAPI LPSTR __stdcall BTICard_MantToAscii(LPSTR buf,INT mant,INT exp);
BTICardAPI ULONG __stdcall BTICard_Mask(ULONG dataval,USHORT cntval);
BTICardAPI VOID __stdcall BTICard_MaxMant(LPULONG mant,LPINT exp);
BTICardAPI ULONG __stdcall BTICard_Mod(ULONG moda,ULONG modb);
BTICardAPI VOID __stdcall BTICard_Mod64(LPULONG resulth,LPULONG resultl,ULONG valah,ULONG valal,ULONG valbh,ULONG valbl);
BTICardAPI ULONG __stdcall BTICard_Mul(ULONG mula,ULONG mulb);
BTICardAPI VOID __stdcall BTICard_Mul64(LPULONG resulth,LPULONG resultl,ULONG valah,ULONG valal,ULONG valbh,ULONG valbl);
BTICardAPI VOID __stdcall BTICard_NormalMant(LPULONG mant,LPINT exp);
BTICardAPI USHORT __stdcall BTICard_PortRd(INT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_PortWr(USHORT value,INT addrval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_ProgRdW(ULONG addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ProgWrW(USHORT value,ULONG addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_PXIStatus(LPULONG infoptr,USHORT infotype,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_RAMRdB(ULONG addrval,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_RAMRdL(ULONG addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMRdmL(LPULONG valueptr,LPULONG addrptr,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMRdmW(LPUSHORT valueptr,LPULONG addrptr,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_RAMRdW(ULONG addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWipe(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWipeEx(USHORT value,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWrB(USHORT value,ULONG addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWrL(ULONG value,ULONG addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWrmL(LPULONG valueptr,LPULONG addrptr,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWrmW(LPUSHORT valueptr,LPULONG addrptr,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCORE handleval);