Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS

            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldPutMin@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGFieldPutMin(UInt32 value, ref UInt32 irigvalh, ref UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGFieldPutSec@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGFieldPutSec(UInt32 value, ref UInt32 irigvalh, ref UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGInputThresholdGet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGInputThresholdGet(ref UInt16 dacval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGInputThresholdSet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGInputThresholdSet(UInt16 dacval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGRd(ref BTIIRIGTIME irigtime, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGRdEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGRdEx(ref UInt16 timebuf, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGSyncStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGSyncStatus(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGTimeBCDToBin@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGTimeBCDToBin(ref UInt32 timevalh, ref UInt32 timevall, UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGTimeBCDToNanoBin@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGTimeBCDToNanoBin(ref UInt32 timevalh, ref UInt32 timevall, UInt32 irigvalh, UInt32 irigvall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGTimeBinToBCD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGTimeBinToBCD(ref UInt32 irigvalh, ref UInt32 irigvall, UInt32 timevalh, UInt32 timevall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGTimeNanoBinToBCD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_IRIGTimeNanoBinToBCD(ref UInt32 irigvalh, ref UInt32 irigvall, UInt32 timevalh, UInt32 timevall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGWr(ref BTIIRIGTIME irigtime, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_IRIGWrEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_IRIGWrEx(ref UInt16 timebuf, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_KernIntStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_KernIntStatus(ref Int32 valueptr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_KernStatus@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_KernStatus(ref UInt32 valueptr, UInt32 typeval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_KernStatusEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_KernStatusEx(ref UInt32 valueptr, UInt32 typeval, UInt32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_MakeLong@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_MakeLong(UInt16 valh, UInt16 vall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_MakeQuad@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt64 BTICard_MakeQuad(UInt32 valh, UInt32 vall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_MakeWord@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_MakeWord(byte valh, byte vall);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_MantToAscii@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_MantToAscii(ref string buf, Int32 mant, Int32 exp);
            public static string BTICard_MantToAscii(ref string buf, Int32 mant, Int32 exp) { return Marshal.PtrToStringAnsi(_BTICard_MantToAscii(ref buf, mant, exp)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Mask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_Mask(UInt32 dataval, UInt16 cntval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_MaxMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_MaxMant(ref UInt32 mant, ref Int32 exp);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Mod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_Mod(UInt32 moda, UInt32 modb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Mod64@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_Mod64(ref UInt32 resulth, ref UInt32 resultl, UInt32 valah, UInt32 valal, UInt32 valbh, UInt32 valbl);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_Mul(UInt32 mula, UInt32 mulb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Mul64@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_Mul64(ref UInt32 resulth, ref UInt32 resultl, UInt32 valah, UInt32 valal, UInt32 valbh, UInt32 valbl);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_NormalMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_NormalMant(ref UInt32 mant, ref Int32 exp);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_PortRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_PortRd(Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_PortWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_PortWr(UInt16 value, Int32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ProgRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_ProgRdW(UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ProgWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ProgWrW(UInt16 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_PXIStatus@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_PXIStatus(ref UInt32 infoptr, UInt16 infotype, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMFill(UInt16 value, UInt32 addrval, UInt32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_RAMRdB(UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_RAMRdL(UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMRdmL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMRdmL(UInt32[] valueptr, UInt32[] addrptr, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMRdmW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMRdmW(UInt16[] valueptr, UInt32[] addrptr, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMRdsL(UInt32[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMRdsW(UInt16[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_RAMRdW(UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWipe(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWipeEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWipeEx(UInt16 value, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWrB(UInt16 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWrL(UInt32 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWrmL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWrmL(UInt32[] valueptr, UInt32[] addrptr, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWrmW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWrmW(UInt16[] valueptr, UInt32[] addrptr, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWrsL(UInt32[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
